# cpsc-585

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.bat  dustriders.sln  main.cpp  vcpkg-packages.bat
.github/: CODEOWNERS
DustRiders/: Callbacks.h  Camera.cpp  DustRiders.sln  DustRiders.vcxproj  DustRiders.vcxproj.filters  GLDebug.cpp  GLDebug.h  GLHandles.h  Geometry.cpp  Log.h  Overlay.cpp  PhysicsSystem.cpp  PhysicsSystem.h  ShaderProgram.h  Texture.cpp  Texture.h  Transform.h  VertexBuffer.h  Window.cpp  Window.h  main.cpp
DustRiders/DustRiders/: AIPathHandler.cpp  AIPathHandler.h  AIVehicle.cpp  AIVehicle.h  AudioHelper.cpp  AudioHelper.h  Camera.cpp  Camera.h  ChunkHandler.cpp  ChunkHandler.h  ConstantsHelper.cpp  ConstantsHelper.h  DebugDefines.h  DustRiders.vcxproj  DustRiders.vcxproj.filters  ECS.cpp  ECS.h  ElementBuffer.cpp  ElementBuffer.h  Entity.h  GameHandler.cpp  GameHandler.h  Geometry.cpp  Geometry.h  Ground.cpp  Ground.h  InputHandler.cpp  InputHandler.h  LocationWriter.h  Log.h  LogWriter.cpp  LogWriter.h  Main.frag  Main.vert  Mesh.h  Model.h  ModelProvider.cpp  ModelProvider.h  MusicBuffer.cpp  MusicBuffer.h  (+66 more)
DustRiders/DustRiders/Debug/: LowLevelAABB_static_64.lib  PVDRuntime_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib  vc143.idb
DustRiders/DustRiders/Release/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXCooking_64.lib  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
DustRiders/DustRiders/assets/: constants.json
DustRiders/DustRiders/assets/drivingPaths/: car2path.json  car3path.json  path1.json  path2.json  path3.json
DustRiders/DustRiders/assets/models/: CarModel.blend  CarModel.blend1  DesertPathDivide.mtl  DesertPathStraight.mtl  RayGun-Beam.mtl  best-car.mtl  better-car-v2.mtl  better-car.blend  better-car.blend1  better-car.mtl  car-flames.mtl  car-model-with-gun.mtl  car-model.blend  car-model.mtl  car-prison.mtl  chunk-1divide.mtl  chunk-2divides.mtl  chunk-arch.mtl  chunk-curved.mtl  chunk-straight.mtl  crystals.mtl  ground-plane.blend  ground-plane.blend1  ground-plane.mtl  rock1.mtl  rock2.mtl  rock3.mtl  rocks.blend  rocks.blend1  (+8 more)
DustRiders/DustRiders/include/: PxSimulationEventCallback.h
DustRiders/DustRiders/snippetrender/: SnippetRender.cpp
DustRiders/DustRiders/snippetvehicle2common/: SnippetVehicleHelpers.cpp
DustRiders/DustRiders/snippetvehicle2directdrive/: SnippetVehicleDirectDrive.cpp  SnippetVehicleRender.cpp
DustRiders/DustRiders/sound/: Recording (2).m4a  Recording.m4a  storm_long.m4a
cpsc-585/: cpsc-585.sln  cpsc-585.vcxproj  main.cpp
cpsc-585-base/: Source.cpp  cpsc-585-base.sln  cpsc-585-base.vcxproj
cpsc-585-base/Debug/: cpsc-585-base.exe.recipe  cpsc-585-base.ilk  cpsc-585-base.vcxproj.FileListAbsolute.txt  vc142.idb
cpsc-585-base/Debug/cpsc-585-base.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpsc-585-base.lastbuildstate  cpsc-585-base.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpsc-585/Debug/: cpsc-585.exe.recipe  cpsc-585.ilk  cpsc-585.vcxproj.FileListAbsolute.txt  vc142.idb
cpsc-585/Debug/cpsc-585.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpsc-585.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/: Development-Setup.md  Game-Controls.md
src/: GLDebug.cpp  GLDebug.h  GLHandles.cpp  GLHandles.h  Geometry.cpp  Geometry.h  Shader.h  ShaderProgram.h  VertexArray.h  VertexBuffer.h  Window.cpp  Window.h  main.cpp
(+3 files in other folders)
